Contrast fixes for text

--- a/assets/style.css
+++ b/assets/style.css
@@ -353,3 +353,7 @@ input[type="submit"] {
     width: 80%;
   }
 }
+
+.contrast-fix {
+  color: black !important;
+}
